--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,28 +1,33 @@
-<h1>Reservations#new</h1>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Reservations#new</h1>
+      <%= form_with(model: @reservation, local: true) do |form| %>
+        <div>
+          <%= form.label :start_location, "Adresse de départ" %>
+          <%= form.text_field :start_location, required: true %>
+        </div>
 
- <%= form_with(model: @reservation, local: true) do |form| %>
-  <div>
-    <%= form.label :start_location, "Adresse de départ" %>
-    <%= form.text_field :start_location, required: true %>
+        <div>
+          <%= form.label :end_location, "Adresse d'arrivée" %>
+          <%= form.text_field :end_location, required: true %>
+        </div>
+
+        <div>
+          <%= form.label :reservation_date, "Date" %>
+          <%= form.date_field :reservation_date, required: true %>
+        </div>
+
+        <div>
+          <%= form.label :reservation_time, "Heure" %>
+          <%= form.time_field :reservation_time, required: true %>
+        </div>
+
+        <div>
+          <%= form.submit "Trouver un chauffeur" %>
+        </div>
+      <% end %>
+
+    </div>
   </div>
-
-  <div>
-    <%= form.label :end_location, "Adresse d'arrivée" %>
-    <%= form.text_field :end_location, required: true %>
-  </div>
-
-  <div>
-    <%= form.label :reservation_date, "Date" %>
-    <%= form.date_field :reservation_date, required: true %>
-  </div>
-
-  <div>
-    <%= form.label :reservation_time, "Heure" %>
-    <%= form.time_field :reservation_time, required: true %>
-  </div>
-
-  <div>
-    <%= form.submit "Trouver un chauffeur" %>
-  </div>
-<% end %>
-
+</div>
